tests/unit/evaluation/flatzinc/test_array_index-bad.exp
test_array_index-bad.fzn:3: error: array index out of range: 6
