tests/unit/evaluation/flatzinc/test_array_index-bad.err_exp3
Uncaught Mercury exception:
"fzlazy_get_array_elem/4: index out of range"
